@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.android.keepass"
-      android:versionName="0.1.1" android:versionCode="2">
+      android:versionName="0.1.2" android:versionCode="3">
     <application android:label="@string/app_name" android:icon="@drawable/keepass_icon">
         <activity android:name=".KeePass"
                   android:label="@string/app_name">
