@@ -18,5 +18,5 @@
 <string name="menu_copy_user">Copy User</string>
 <string name="menu_copy_pass">Copy Password</string>
 <string name="pass_filename">Filename:</string>
-<color name="group">#FF00FF</color>
+
 </resources>
