@@ -1,3 +1,7 @@
+KeePassDroid (0.1.2)
+
+  * Fix crash when accessing the first root level group.
+
 KeePassDroid (0.1.1)
 
   * Minor tweaks to layout.
